--- a/view/index.html
+++ b/view/index.html
@@ -85,6 +85,31 @@
         margin-left: 15px;
         margin-right: auto;
     }
+
+    .navbar-center {
+        /* border: 0px solid green; */
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 18px;
+    }
+
+    input, button {
+        border-bottom-width: 0px;
+        border-right-width: 0px;
+        border-top-width: 0px;
+        border-left-width: 0px;
+        border-radius: 2px;
+        font-size: 20px;
+    }
+
+    button {
+        background-color: #0061ff;
+        color: white;
+    }
+    button:hover {
+        background-color:white;
+        color:  #0061ff;
+    }
 </style>
 <style>
     /*Li va Ul*/
@@ -216,10 +241,10 @@
         <a class="nav-link" href="/showInfor"><i class="fas fa-user" style="color: white"></i></a>
         <a class="nav-link" href="/shoppingCart"><i class="fas fa-cart-arrow-down" style="color: white"></i></a>
     </div>
-    <div class="search-container">
+    <div class="navbar-center">
         <form method="post">
-            <input type="text" placeholder="Search.." name="search">
-            <button type="submit"><i class="fa fa-search"></i></button>
+            <input type="text" placeholder="search" name="searchProduct">
+            <button type="submit">Search</button>
         </form>
     </div>
     <div class="navbar-right">
@@ -231,11 +256,9 @@
         <h1>shop ba con sói hướng nội</h1>
     </div>
     <div>
-        <select>
-            <option>-Sắp xếp-</option>
-            <option value="http://localhost:8080/sortUp">Sắp xếp theo giá tăng dần</option><br>
-            <option value="http://localhost:8080/sortDown">Sắp xếp theo giá giảm dần</option><br>
-        </select>
+        <label>-Sắp xếp-</label><br>
+        <a href="/sortUp">Sắp xếp theo giá tăng dần</a><br>
+        <a href="/sortDown">Sắp xếp theo giá giảm dần</a>
     </div>
     <ul class="products">
         {product}
