--- a/view/product/shoppingCart.html
+++ b/view/product/shoppingCart.html
@@ -263,8 +263,10 @@
     }
 
     .totalPrice {
-        margin-left: 95%;
-        font-weight: bold
+        margin-left: 80%;
+        font-weight: bold;
+        font-size: 20px;
+        color:#0061ff
     }
 
     table {
@@ -335,7 +337,7 @@
         {shoppingCart}
         </tbody>
     </table>
-    <div class="totalPrice" style="font-size: 50px; color:#0061ff" >Total: {totalPrice}VND</div>
+    <div class="totalPrice" >Total: {totalPrice}VND</div>
     <div class></div>
 </div>
 </body>
